--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <main>
-        <header></header>
-        <section>
-            <button>+ add book</button>
-            <div class="book-list">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Book Library</title>
+	</head>
+	<body>
+		<main>
+			<header>
+				<div class="header-container">
+					<div class="search-container">
+						<input id="search" type="text" placeholder="search..." />
 
-            </div>
-        </section>
-        <footer></footer>
-    </main>
-    <script src="script.js"></script>
-</body>
+						<svg id="search-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<title>magnify</title>
+							<path
+								d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+						</svg>
+					</div>
+					<div class="user-profile">
+						<div class="avatar-container">
+							<img class="avatar" src="./assets/profile-img.jpeg" alt="" />
+						</div>
+						<p>user name</p>
+					</div>
+				</div>
+			</header>
+			<section>
+				<div class="container">
+					<button>+ add book</button>
+					<div class="book-list">
+						<div class="active-books"></div>
+						<div class="queue-books"></div>
+						<div class="finished-books"></div>
+					</div>
+				</div>
+			</section>
+			<footer>
+				<div class="footer-container"></div>
+			</footer>
+		</main>
+		<script src="script.js"></script>
+	</body>
 </html>
