--- a/index.html
+++ b/index.html
@@ -1,51 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
-		<title>Book Library</title>
-	</head>
-	<body>
-		<main>
-			<header>
-				<div class="header-container">
-					<div class="header-top">
-						<div class="search-container">
-							<input id="search" type="text" placeholder="search..." />
-							<svg id="search-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-								<title>magnify</title>
-								<path
-									d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-							</svg>
-						</div>
-						<div class="user-profile">
-							<div class="avatar-container">
-								<img class="avatar" src="./assets/profile-img.jpeg" alt="" />
-							</div>
-							<p>user name</p>
-						</div>
-					</div>
-					<div class="header-bottom">
-						<h1>Hello, User</h1>
-						<p>"Reading is essential for those who seek to rise above the ordinary", - <span>Jim Rohn</span></p>
-					</div>
-				</div>
-			</header>
-			<section>
-				<div class="container">
-					<button>+ add book</button>
-					<div class="book-list">
-						<div class="active-books"></div>
-						<div class="queue-books"></div>
-						<div class="finished-books"></div>
-					</div>
-				</div>
-			</section>
-			<footer>
-				<div class="footer-container"></div>
-			</footer>
-		</main>
-		<script src="script.js"></script>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Book Library</title>
+    </head>
+    <body>
+        <main>
+            <header>
+                <div class="header-container">
+                    <div class="header-top">
+                        <div class="search-container">
+                            <input
+                                id="search"
+                                type="text"
+                                placeholder="search..."
+                            />
+                            <svg
+                                id="search-btn"
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 24 24"
+                            >
+                                <title>magnify</title>
+                                <path
+                                    d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
+                                />
+                            </svg>
+                        </div>
+                        <div class="user-profile">
+                            <div class="avatar-container">
+                                <img
+                                    class="avatar"
+                                    src="./assets/profile-img.jpeg"
+                                    alt=""
+                                />
+                            </div>
+                            <p>user name</p>
+                        </div>
+                    </div>
+                    <div class="header-bottom">
+                        <div class="user-info">
+                            <h1>Hello, User</h1>
+                            <p>
+                                "Reading is essential for those who seek to rise
+                                above the ordinary", - <span>Jim Rohn</span>
+                            </p>
+                        </div>
+                        <div class="options">
+                            <button id="add-book">+ add book</button>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <section>
+                <div class="container">
+                    <div class="book-list">
+                        <div class="active-books">
+                            <h2>You are reading...</h2>
+                            <div class="list">
+                                <div class="card-xl">
+                                    <div class="card-xl__book-cover">
+                                        <h3>The Hobit</h3>
+                                        <p>J.J.R Tolkien</p>
+                                    </div>
+                                    <div class="card-xl__info">
+                                        <div class="info-header">
+                                            <h3>The Hobit</h3>
+                                            <p>J.J.R Tolkien</p>
+                                        </div>
+                                        <div class="info-progress">
+                                            <h3>Your Progress</h3>
+                                            <div class="progress-bar"></div>
+                                            <p>
+                                                <span class="pages-finished"
+                                                    >200</span
+                                                >
+                                                of
+                                                <span class="pages-total"
+                                                    >256</span
+                                                >
+                                                Pages
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="queue-books"></div>
+                        <div class="finished-books"></div>
+                    </div>
+                </div>
+            </section>
+            <footer>
+                <div class="footer-container"></div>
+            </footer>
+        </main>
+        <script src="script.js"></script>
+    </body>
 </html>
