removed the add button

--- a/index.html
+++ b/index.html
@@ -47,18 +47,44 @@
                                 above the ordinary", - <span>Jim Rohn</span>
                             </p>
                         </div>
-                        <div class="options">
-                            <button id="add-book">+ add book</button>
-                        </div>
                     </div>
                 </div>
             </header>
             <section>
                 <div class="container">
+                    <!-- <div class="options">
+                        <button id="add-book">+ add book</button>
+                    </div> -->
                     <div class="book-list">
                         <div class="active-books">
-                            <h2>You are reading...</h2>
+                            <h2 class="row-title">Curently Reading</h2>
                             <div class="list">
+                                <div class="card-xl">
+                                    <div class="card-xl__book-cover">
+                                        <h3>The Hobit</h3>
+                                        <p>J.J.R Tolkien</p>
+                                    </div>
+                                    <div class="card-xl__info">
+                                        <div class="info-header">
+                                            <h3>The Hobit</h3>
+                                            <p>J.J.R Tolkien</p>
+                                        </div>
+                                        <div class="info-progress">
+                                            <h3>Your Progress</h3>
+                                            <div class="progress-bar"></div>
+                                            <p>
+                                                <span class="pages-finished"
+                                                    >200</span
+                                                >
+                                                of
+                                                <span class="pages-total"
+                                                    >256</span
+                                                >
+                                                Pages
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="card-xl">
                                     <div class="card-xl__book-cover">
                                         <h3>The Hobit</h3>
