added function to create card in a module file to separate logic

--- a/index.html
+++ b/index.html
@@ -59,58 +59,7 @@
                         <div class="active-books">
                             <h2 class="row-title">Curently Reading</h2>
                             <div class="list">
-                                <div class="card-xl">
-                                    <div class="card-xl__book-cover">
-                                        <h3>The Hobit</h3>
-                                        <p>J.J.R Tolkien</p>
-                                    </div>
-                                    <div class="card-xl__info">
-                                        <div class="info-header">
-                                            <h3>The Hobit</h3>
-                                            <p>J.J.R Tolkien</p>
-                                        </div>
-                                        <div class="info-progress">
-                                            <h3>Your Progress</h3>
-                                            <div class="progress-bar"></div>
-                                            <p>
-                                                <span class="pages-finished"
-                                                    >200</span
-                                                >
-                                                of
-                                                <span class="pages-total"
-                                                    >256</span
-                                                >
-                                                Pages
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card-xl">
-                                    <div class="card-xl__book-cover">
-                                        <h3>The Hobit</h3>
-                                        <p>J.J.R Tolkien</p>
-                                    </div>
-                                    <div class="card-xl__info">
-                                        <div class="info-header">
-                                            <h3>The Hobit</h3>
-                                            <p>J.J.R Tolkien</p>
-                                        </div>
-                                        <div class="info-progress">
-                                            <h3>Your Progress</h3>
-                                            <div class="progress-bar"></div>
-                                            <p>
-                                                <span class="pages-finished"
-                                                    >200</span
-                                                >
-                                                of
-                                                <span class="pages-total"
-                                                    >256</span
-                                                >
-                                                Pages
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
+                                <!-- in pregress books -->
                             </div>
                         </div>
                         <div class="queue-books"></div>
@@ -122,6 +71,6 @@
                 <div class="footer-container"></div>
             </footer>
         </main>
-        <script src="script.js"></script>
+        <script type="module" src="script.js"></script>
     </body>
 </html>
