--- a/index.html
+++ b/index.html
@@ -1,86 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
-        <title>Book Library</title>
-    </head>
-    <body>
-        <main>
-            <header>
-                <div class="header-container">
-                    <div class="header-top">
-                        <div class="search-container">
-                            <input
-                                id="search"
-                                type="text"
-                                placeholder="search..."
-                            />
-                            <svg
-                                id="search-btn"
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 24 24"
-                            >
-                                <title>magnify</title>
-                                <path
-                                    d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
-                                />
-                            </svg>
-                        </div>
-                        <div class="user-profile">
-                            <div class="avatar-container">
-                                <img
-                                    class="avatar"
-                                    src="./assets/profile-img.jpeg"
-                                    alt=""
-                                />
-                            </div>
-                            <p>user name</p>
-                        </div>
-                    </div>
-                    <div class="header-bottom">
-                        <div class="user-info">
-                            <h1>Hello, User</h1>
-                            <p>
-                                "Reading is essential for those who seek to rise
-                                above the ordinary", - <span>Jim Rohn</span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </header>
-            <section>
-                <div class="container">
-                    <!-- <div class="options">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Book Library</title>
+	</head>
+	<body>
+		<main>
+			<header>
+				<div class="header-container">
+					<div class="header-top">
+						<div class="search-container">
+							<input id="search" type="text" placeholder="search..." />
+							<svg id="search-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+								<title>magnify</title>
+								<path
+									d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+							</svg>
+						</div>
+						<div class="user-profile">
+							<div class="avatar-container">
+								<img class="avatar" src="./assets/profile-img.jpeg" alt="" />
+							</div>
+							<p>user name</p>
+						</div>
+					</div>
+					<div class="header-bottom">
+						<div class="user-info">
+							<h1>Hello, User</h1>
+							<p>"Reading is essential for those who seek to rise above the ordinary", - <span>Jim Rohn</span></p>
+						</div>
+					</div>
+				</div>
+			</header>
+			<section>
+				<div class="container">
+					<!-- <div class="options">
                         <button id="add-book">+ add book</button>
                     </div> -->
-                    <div class="book-list">
-                        <div class="active-books">
-                            <h2 class="row-title">Currently Reading</h2>
-                            <div id="in-progress" class="list">
-                                <!-- in progress books -->
-                            </div>
-                        </div>
-                        <div class="queue-books">
-                            <h2 class="row-title">In Queue</h2>
-                            <div id="in-queue" class="list">
-                                <!-- in queue books  -->
-                            </div>
-                        </div>
-                        <div class="finished-books">
-                            <h2 class="row-title">Finished</h2>
-                            <div id="finished" class="list">
-                                <!-- in queue books  -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <footer>
-                <div class="footer-container"></div>
-            </footer>
-        </main>
-        <script type="module" src="script.js"></script>
-    </body>
+					<div class="book-list">
+						<div class="active-books">
+							<h2 class="row-title">Currently Reading</h2>
+							<div id="in-progress" class="list">
+								<!-- in progress books -->
+							</div>
+						</div>
+						<div class="queue-books">
+							<h2 class="row-title">In Queue</h2>
+							<div id="in-queue" class="list">
+								<!-- in queue books  -->
+							</div>
+						</div>
+						<div class="finished-books">
+							<h2 class="row-title">Finished</h2>
+							<div id="finished" class="list">
+								<!-- in queue books  -->
+							</div>
+						</div>
+					</div>
+				</div>
+				<button id="add-book">+</button>
+				<div class="add-form-container">
+					<form id="add-form" action="">
+						<div class="form-control">
+							<label for="title">Book Title</label>
+							<input type="text" name="title" id="title" required />
+						</div>
+						<div class="form-control">
+							<label for="author">Book Author</label>
+							<input type="text" name="author" id="author" required />
+						</div>
+						<div class="form-control">
+							<label for="pages">Book Number of Pages</label>
+							<input type="number" name="pages" id="pages" required />
+						</div>
+						<div class="form-control">
+							<label for="cover">Book Cover URL (optional)</label>
+							<input type="text" name="cover" id="cover" />
+						</div>
+						<div class="form-control-select">
+							<label for="genre">Book Genre</label>
+							<select name="genre" id="genre">
+								<option value="">Select Genre</option>
+								<option value="horror">Horror</option>
+								<option value="sf">Science Fiction</option>
+								<option value="psychology">Psychology</option>
+								<option value="development">Personal development</option>
+							</select>
+						</div>
+						<button type="submit">Confirm</button>
+					</form>
+				</div>
+			</section>
+			<footer>
+				<div class="footer-container"></div>
+			</footer>
+		</main>
+		<script type="module" src="script.js"></script>
+	</body>
 </html>
