added media-queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 							</svg>
 						</div>
 						<div class="user-profile">
+							<p>Logout</p>
 							<div class="avatar-container">
 								<img class="avatar" src="./assets/profile-img.jpeg" alt="" />
 							</div>
-							<p>user name</p>
 						</div>
 					</div>
 					<div class="header-bottom">
@@ -97,7 +97,10 @@
 				</div>
 			</section>
 			<footer>
-				<div class="footer-container"></div>
+				<div class="footer-container">
+					This is a <a href="https://www.theodinproject.com/lessons/node-path-javascript-library">The Odin Project</a> project
+					created by <a href="https://github.com/Szidelo">Szidelo</a>.
+				</div>
 			</footer>
 		</main>
 		<script type="module" src="script.js"></script>
