improved banner ui

--- a/auth.html
+++ b/auth.html
@@ -65,11 +65,13 @@
 			</div>
 			<div class="auth-banner">
 				<div class="auth-banner__signup">
-					<h2>Don't have an account?</h2>
+					<h2 class="banner-title">New Here?</h2>
+					<p class="banner-text">Sign up to get started with Book Library.</p>
 					<button class="btn btn-secondary" id="signUpButton">Sign Up</button>
 				</div>
 				<div class="auth-banner__signin" style="display: none">
-					<h2>Already have an account?</h2>
+					<h2 class="banner-title">Already have an account?</h2>
+					<p class="banner-text">Sign in to get started with Book Library.</p>
 					<button class="btn btn-secondary" id="signInButton">Sign In</button>
 				</div>
 			</div>
