--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<p id="logout">Logout</p>
 							<a href="./pages/auth.html">
 								<div class="avatar-container">
-									<img id="avatar" class="avatar" src="./assets/profile-img.jpeg" alt="" />
+									<img id="avatar" class="avatar" src="./assets/profile-fallback.jpg" alt="" />
 								</div>
 							</a>
 						</div>
@@ -67,7 +67,6 @@
 						</div>
 					</div>
 				</div>
-				<button id="add-book">+</button>
 				<div class="add-form-container">
 					<form id="add-form" action="">
 						<div class="form-control">
@@ -101,6 +100,7 @@
 				</div>
 			</section>
 			<footer>
+				<button id="add-book">+</button>
 				<div class="footer-container">
 					This is a <a href="https://www.theodinproject.com/lessons/node-path-javascript-library">The Odin Project</a> project
 					created by <a href="https://github.com/Szidelo">Szidelo</a>.
