--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Book Library</title>
 	</head>
 	<body>
-		<main>
+		<main id="app">
 			<header>
 				<div class="header-container">
 					<div class="header-top">
