responsive auth form, added password recovery function to be able to reset password

--- a/auth.html
+++ b/auth.html
@@ -26,8 +26,8 @@
 					</div>
 					<div class="form-control input-container">
 						<i class="fas fa-user"></i>
-						<input type="text" id="photoURL" placeholder="image URL" required />
-						<label for="photoURL">Image URL</label>
+						<input type="text" id="photoURL" placeholder="image URL" />
+						<label for="photoURL">Image URL (optional)</label>
 					</div>
 					<div class="form-control input-container">
 						<i class="fas fa-envelope"></i>
@@ -57,9 +57,7 @@
 						<input type="password" id="password" placeholder="Password" required />
 						<label for="password">Password</label>
 					</div>
-					<p class="recover">
-						<a href="#">Recover Password</a>
-					</p>
+					<p id="recover" class="recover">Recover Password</p>
 					<button class="btn" id="submitSignIn">Sign In</button>
 				</form>
 			</div>
