added other category for books as a default

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 							<label for="genre">Book Genre</label>
 							<select name="genre" id="genre">
 								<option value="">Select Genre</option>
+								<option value="other">Other</option>
 								<option value="horror">Horror</option>
 								<option value="sf">Science Fiction</option>
 								<option value="psychology">Psychology</option>
